Opened 16 years ago

Closed 16 years ago

#1602 closed bug (fixed)

Using Preferences -> Backgrounds does not clear image when resetting to None

Reported by: el-al Owned by: korli
Priority: normal Milestone: R1
Component: Preferences/Backgrounds Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

After setting a desktop background using Prefs -> Background -> Image -> Other using All Workspaces and Scale To Fit (in this case), I can no longer reset it to None. The (current) selected desktop background persists, even after a re-boot.

The selected image is in .png format and in 1024x768 resolution scaled to a screen resolution of 1152x864.

This is on Rev 22830

Change History (1)

comment:1 by korli, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev22848.

Note: See TracTickets for help on using tickets.