clean the background for all workspaces when no image is selected this fixes bug #1602

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22848 a95241bf-73f2-0310-859d-f6bbb57e9c96